# pitch-control

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  main.py
data/: ball_flight_lookup.npz  epv_grid.csv
scripts/: benchmark_frame.py  export_slim.py  interactive_canvas.py  interactive_demo.py  precompute.py  test_setup.py
src/pitch_control/: __init__.py
src/pitch_control/io/: __init__.py  metrica.py
src/pitch_control/models/: __init__.py  ball_trajectory.py  epv.py  obso.py  pitch_control.py
src/pitch_control/physics/: __init__.py
src/pitch_control/viz/: __init__.py  pitch.py
