[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pitch-control"
version = "0.1.0"
description = "Vectorized pitch control analysis for football tracking data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Donal Hill" }
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "numba>=0.57",
    "matplotlib>=3.7",
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
    "plotly>=5.18",
    "joblib>=1.3",
    "requests>=2.28",
]

[project.optional-dependencies]
gpu = ["cupy>=12.0"]
dev = ["pytest>=7.0", "jupyter>=1.0", "ruff>=0.1"]

[project.scripts]
pitch-control = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pitch_control", "app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
